# air-quality-be

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  run.sh
alembic/: env.py
alembic/versions/: 0001_analytics_be_tables.py
app/: auth.py  db.py  main.py  mock_data.py
app/analytics/: __init__.py  anomaly_detection.py  correlation.py  daily_summary.py  evaluation.py  forecast_arima.py  forecast_linear.py  forecast_prophet.py  health_impact.py  router.py  scheduler.py  seasonal.py  trend.py
app/grid_fusion/: __init__.py  fuser.py
app/grid_ingest/: berkeley_earth.py  openmeteo_grid.py
app/grid_ml/: __init__.py  features.py  predict.py  train.py
app/models/: __init__.py  analytics.py  base.py  catalog.py  core.py  ensure.py  forecast.py
db/: 001_analytics_missing_tables.sql  schema.sql  seed.bootstrap.sql
db/migrations/: 001_station_analytics.sql  002_expand_ingest.sql  003_alerts_system.sql  004_analytics_ml.sql  005_waqi_provider.sql  006_advanced_analytics.sql  007_bootstrap_stations.sql
openapi/: ops.yaml
scripts/: seed_grid_vietnam.py
