[project]
name = "air-quality-be"
version = "0.2.0"
description = "FastAPI service – ops management, analytics & ML forecasting"
requires-python = ">=3.11"

dependencies = [
  # --- Web framework ---
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",

  # --- Database ---
  "asyncpg>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13.0",

  # --- HTTP / Auth ---
  "httpx>=0.28.0",
  "PyJWT[crypto]>=2.10.0",

  # --- Data / ML ---
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "prophet>=1.1.5",
  "scipy>=1.14.0",
  "statsmodels>=0.14.0",

  # --- Scheduler ---
  "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.uvicorn]
factory = false

[project.scripts]
# Alembic shortcuts (also available via: alembic <command>)
migrate-up = "alembic:main"

[tool.alembic]
# Configured in alembic.ini
